# HTTPServer

HttpServer/examples/: CMakeLists.txt  README.md  todo_server.cpp
HttpServer/include/http/: HttpRequest.h  HttpResponse.h  HttpServer.h
HttpServer/include/middleware/ratelimit/: RateLimitMiddleware.h
HttpServer/include/router/: Router.h  RouterHandler.h
HttpServer/include/session/: Session.h
HttpServer/include/utils/db/: DbConnection.h
HttpServer/src/http/: HttpContext.cpp  HttpRequest.cpp  HttpResponse.cpp  HttpServer.cpp
HttpServer/src/middleware/ratelimit/: RateLimitMiddleware.cpp
HttpServer/src/router/: Router.cpp
bench/: CMakeLists.txt  README.md  bench_db.cpp  bench_login.cpp  bench_sse.cpp  run_bench.sh
bench/results/20260323T115113Z/: login.csv  login.txt
bench/results/20260323T115636Z/: db.csv  login.csv  login.txt  sse.csv  sse.json  sse.txt
bench/results/20260323T122009Z/: db_stdout.csv  login.csv  login.txt  sse.csv  sse.json  sse.txt
bench/results/20260323T122348Z/: db.csv  login.csv  login.txt  sse.csv  sse.json  sse.txt
chat_ui/: CMakeLists.txt  DISTRIBUTED.md  README.md  chat_main.cpp  chat_ui.html  config.json
chat_ui/ai/: AIFactory.h  AIStrategies.h  ModelRegister.h
chat_ui/api/: ConversationHandler.h  MessageHandler.h
chat_ui/auth/: AuthHandler.h  AuthMiddleware.h
chat_ui/dao/: ConversationDao.h  MessageDao.h  UserDao.h
chat_ui/mcp/: BuiltinTools.h  MCPAgent.h  MCPTool.h  MCPToolRegistry.h
chat_ui/sql/: init.sql
chat_ui/sse/: ChatSseHandler.h  LlmClient.h  RedisPubSub.h  SseManager.h
